add separate style.css

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Dungeon Master Support Web App</title>
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
